--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <style>
 red{color:Red}
 blue{color:blue}
-green{color:lime}
+green{color:green}
 yellow{color:yellow}
+orange{color:orange}
+input{height:9px}
 </style>
 <pre>
 <center>
@@ -10,3 +12,17 @@ yellow{color:yellow}
 am i a  <red>││├┤ ├┬┘├─┤││││ ┬├┤  ││  ├─┘└─┐└┬┘│  ├─┤│ │├─┘├─┤ │ ├─┤ ┌┘</red>
        <red>─┴┘└─┘┴└─┴ ┴┘└┘└─┘└─┘─┴┘  ┴  └─┘ ┴ └─┘┴ ┴└─┘┴  ┴ ┴ ┴ ┴ ┴ o </red>
 personality test
+
+</center>
+-------------------------------------------------------
+ <orange>O</orange>    what is your favorite color?
+<green><|></green>     <input type=radio>blue</input>       <input type=radio>orange</input>
+<blue>/ \</blue>     <input type=radio>red</input>        <input type=radio>purple</input>
+        <input type=radio>yellow</input>     <input type=radio>grey</input>
+        <input type=radio>green</input>      <input type=radio>none</input>
+-------------------------------------------------------
+ <orange>O</orange><green>__</green>  have you ever murdered someone, or multiple people?
+<green>/|</green>     <input type=radio>yes</input>
+<blue>/ \</blue>    <input type=radio>no</input>
+       <input type=radio>prefer not to say</input>
+-------------------------------------------------------
